feature(api):implement flag api - Implement the api to flag an ad for both v1 and v2 api's - Refactor swagger api doc to reflect changes [Finishes #166552711]
