# src/server.js
@@ -14,11 +14,15 @@ import carRoute from './routes/car';
 
 import orderRoute from './routes/order';
 
+import flagRoute from './routes/flag';
+
 import userRoute2 from './routes/usingDb/user';
 
 import carRoute2 from './routes/usingDb/car';
 
 import orderRoute2 from './routes/usingDb/order';
+
+import flagRoute2 from './routes/usingDb/flag';
 
 require('dotenv').config();
 
@@ -26,7 +30,7 @@ const app = express();
 
 const swaggerDocument = require('../swagger.json');
 
-const swaggerDocumentV2 = require('../swagger_v2.json');
+// const swaggerDocumentV2 = require('../swagger_v2.json');
 
 const PORT = process.env.PORT || 5000;
 
@@ -42,6 +46,8 @@ app.use('/api/v1/car', carRoute);
 
 app.use('/api/v1/order', orderRoute);
 
+app.use('/api/v1/flag', flagRoute);
+
 // Swagger API doc
 app.use('/api/v1/docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
@@ -55,7 +61,9 @@ app.use('/api/v2/car', carRoute2);
 
 app.use('/api/v2/order', orderRoute2);
 
-app.use('/api/v2/docs', swaggerUi.serve, swaggerUi.setup(swaggerDocumentV2));
+app.use('/api/v2/flag', flagRoute2);
+
+// app.use('/api/v2/docs', swaggerUi.serve, swaggerUi.setup(swaggerDocumentV2));
 
 if (process.env.NODE_ENV !== 'test') {
   // eslint-disable-next-line no-console
